# repo-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROJECT.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_cli/: __init__.py  config.py  gh_ops.py  git_ops.py  main.py  utils.py
src/repo_cli/commands/: __init__.py
tests/: __init__.py  test_cli.py  test_config.py  test_gh_ops.py  test_git_ops.py  test_utils.py
